# revenant

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: workflow-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/: obsidian-rest-notes.md
docs/superpowers/plans/: 2026-06-16-mermaid-controls.md  2026-06-16-preview-zoom.md  2026-06-20-agent-review-handback.md  2026-06-23-find-replace.md
docs/superpowers/specs/: 2026-06-13-revenant-markdown-viewer-design.md  2026-06-14-revenant-annotation-markers-design.md  2026-06-14-revenant-settings-panel-design.md  2026-06-14-revenant-v1.1-hardening-design.md  2026-06-15-revenant-pdf-html-export-design.md  2026-06-15-revenant-settings-sidebar-redesign.md  (+8 more)
integrations/: README.md  agent-instructions.md
integrations/claude-code/: revenant-review.md
plans/: docs-superpowers-specs-2026-06-13-revenant-markdow.md  docs-superpowers-specs-2026-06-14-revenant-annotat.md  docs-superpowers-specs-2026-06-14-revenant-setting.md  docs-superpowers-specs-2026-06-14-revenant-v1-1-ha.md  docs-superpowers-specs-2026-06-15-revenant-pdf-htm.md  docs-superpowers-specs-2026-06-15-revenant-version.md  docs-superpowers-specs-2026-06-16-revenant-callout.md  docs-superpowers-specs-2026-06-16-revenant-setting.md  docs-superpowers-specs-2026-06-20-mermaid-renderin.md
public/: diagram-viewer.html  diagram-viewer.js
samples/: callouts-wikilinks.md  code-highlighting.md  mermaid-diagrams.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.windows-fixed.conf.json
src-tauri/capabilities/: default.json  diagram.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  export.rs  file_io.rs  frontmatter.rs  ipc.rs  lib.rs  main.rs  obsidian.rs  paths.rs  reanchor.rs  schema.rs  secrets.rs  settings.rs  snapshot.rs  updates.rs
src-tauri/src/tests/: annotations_tests.rs  export_tests.rs  file_io_tests.rs  mod.rs  obsidian_tests.rs  reanchor_integration_tests.rs  reanchor_tests.rs  settings_tests.rs  updates_tests.rs  watcher_tests.rs
src/lib/: AnnotationComposer.svelte  AnnotationDrawer.svelte  AnnotationPopover.svelte  AnnotationSeals.svelte  CommandPalette.svelte  CommentCard.svelte  ConflictModal.svelte  EditorPane.svelte  ExportDialog.svelte  FindBar.svelte  KeyboardShortcutsModal.svelte  MermaidContainer.svelte  MermaidLightbox.svelte  PreviewPane.svelte  PreviewStatusBar.svelte  ResizeHandle.svelte  ReviewExporter.ts  SettingsPage.svelte  SettingsPanel.svelte  Suminagashi.svelte  TabManager.svelte  ThemeToggle.svelte  Toast.svelte  Toolbar.svelte  UnsavedChangesModal.svelte  agentNudge.ts  annotationActions.ts  annotationHighlight.ts  annotationResolve.ts  commandFilter.ts  diagramCopy.ts  diagramTransform.ts  documentExport.ts  editor-flush.ts  find-highlight.ts  layout.ts  openingAnimation.ts  scrollSync.ts
src/tests/: about_section.test.ts  agent_nudge.test.ts  annotation_composer.test.ts  annotation_cycle.test.ts  annotation_drawer_destroy.test.ts  annotation_focus.test.ts  annotation_highlight.test.ts  annotation_popover.test.ts  annotation_seals.test.ts  annotation_undo.test.ts  annotations.test.ts  annotations_store.test.ts  callouts_wikilinks.test.ts  command_filter.test.ts  diagram_copy.test.ts  diagram_transform.test.ts  document_export.test.ts  editor_pane_flush.test.ts  find_highlight.test.ts  find_store.test.ts  ipc_contract.test.ts  layout.test.ts  markdown_blockmap.test.ts  markdown_cache.test.ts  markdown_sanitize.test.ts  mermaid_inline_sizing.test.ts  mermaid_lightbox.test.ts  mermaid_theme.test.ts  opening_animation.test.ts  preview_isolation.test.ts  preview_status_bar.test.ts  preview_zoom.test.ts  review_exporter.test.ts  scroll_sync.test.ts  scroll_sync_index.test.ts  settings_panel.test.ts  settings_panel_shell.test.ts  setup.ts  tab_close_focus.test.ts  theme_store.test.ts
tasks/: lessons.md
(+27 files in other folders)
