[package]
name = "revenant"
version = "0.1.0"
description = "Markdown viewer and review companion"
authors = ["clogic@gmail.com"]
license = ""
repository = ""
default-run = "revenant"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "revenant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revenant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
similar = { version = "2", features = ["text"] }
notify = "6"
thiserror = "1"
hex = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
