[package]
name = "revenant"
version = "0.1.0"
description = "Markdown viewer and review companion"
authors = ["clogic@gmail.com"]
license = ""
repository = ""
default-run = "revenant"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "revenant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revenant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml (dtolnay) was archived/unmaintained in 2024 (RUSTSEC-2024-0320).
# serde_yaml_ng is the maintained drop-in fork of 0.9.34 — aliased so all the
# existing `serde_yaml::` call sites stay unchanged (#27).
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
similar = { version = "2", features = ["text"] }
notify = "6"
thiserror = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
fd-lock = "3"
percent-encoding = "2"
base64 = "0.21"

# macOS-only: native WKWebView snapshot for the open transition (see snapshot.rs).
# Versions match the objc2 family wry 0.55 already locks, so no extra crates are
# pulled into the tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSError", "NSString", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSBitmapImageRep", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "WKPDFConfiguration", "WKWebViewConfiguration", "WKNavigation", "WKNavigationDelegate", "block2"] }
dispatch2 = "0.3"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
